--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 	<script src="http://apps.bdimg.com/libs/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	<script>
 		$(function(){
-            $("button").click = function() {
+            $("button").click(function() {
                 $("div").slideToggle(2000);
-            };
+            });
         })
 	</script>
 </head>
