--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         div {background-color: red; width: 100px; height: 100px;}
     </style>
 	<link href="http://apps.bdimg.com/libs/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link rel="shortcut icon" href="http://www.baidu.com/favicon.ico" type="image/x-icon">
 	<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="http://apps.bdimg.com/libs/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	<script>
