--- a/index.html
+++ b/index.html
@@ -2,27 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>My Blog</title>
-    <style>
-        div {background-color: red; width: 100px; height: 100px;}
-    </style>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+	<title>main</title>
 	<link href="http://apps.bdimg.com/libs/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/Jerrymouse0/Jerrymouse0.github.io/master/%E9%9B%AA%E8%8A%B1.ico" type="image/x-icon">
 	<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="http://apps.bdimg.com/libs/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-	<script>
-		$(function(){
-            $("button").click(function() {
-                $("div").slideToggle(2000);
-            });
-        })
-	</script>
 </head>
 <body>
-	<h1>Hello World</h1>
-	<button class="btn btn-primary">Click</button>
-	<p>Welcome to my blog!</p>
-    <div></div>
+	<img src="https://github.com/Jerrymouse0/Jerrymouse0.github.io/blob/master/1.jpg" alt="zhuye" class="img-rounded img-responsive">
 </body>
 </html>
