--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 	<script src="http://apps.bdimg.com/libs/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<img src="https://github.com/Jerrymouse0/Jerrymouse0.github.io/blob/master/1.jpg" alt="zhuye" class="img-rounded img-responsive">
+	<img src="https://github.com/Jerrymouse0/Jerrymouse0.github.io/blob/master/1.jpg?raw=true" alt="zhuye" class="img-rounded img-responsive">
 </body>
 </html>
