--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-	<title>main</title>
+	<title>My Blog</title>
 	<link href="http://apps.bdimg.com/libs/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/Jerrymouse0/Jerrymouse0.github.io/master/%E9%9B%AA%E8%8A%B1.ico" type="image/x-icon">
 	<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
