--- a/index.html
+++ b/index.html
@@ -1,16 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-	<title>My Blog</title>
-	<link href="http://apps.bdimg.com/libs/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>百草园</title>
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/Jerrymouse0/Jerrymouse0.github.io/master/%E9%9B%AA%E8%8A%B1.ico" type="image/x-icon">
-	<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script src="http://apps.bdimg.com/libs/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <link href="http://apps.bdimg.com/libs/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link rel="stylesheet" type="text/css" href="https://github.com/Jerrymouse0/Jerrymouse0.github.io/master/index.css">
+    <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="http://apps.bdimg.com/libs/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <!--[if lt IE 9]>
+        <script src="http://apps.bdimg.com/libs/html5shiv/r29/html5.min.js"></script>
+        <script src="http://apps.bdimg.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <![endif]-->
 </head>
+
 <body>
-	<img src="http://5513cb398d7f0.t73.qifeiye.com/qfy-content/uploads/2014/06/665ec6826b602c88636136a13889b332.jpg" alt="zhuye" class="img-rounded img-responsive">
+    <div class="navbar navbar-default mynav" role="navigation" id="0">
+        <div class="navbar-header">
+            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+                <span class="sr-only">Toggle Navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a href="http://www.morning1014.info" class="navbar-brand" style="color:white;font-size: 2.5em">百草园</a>
+        </div>
+        <div class="collapse navbar-collapse navbar-responsive-collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li class="first-nav"><a href="#0" style="color:white;font-size: 1.5em">网站首页</a></li>
+                <li><a href="#1" style="color:white;font-size: 1.5em">个人简历</a></li>
+                <li><a href="#2" style="color:white;font-size: 1.5em">相关文章</a></li>
+                <li><a href="#3" style="color:white;font-size: 1.5em">一些demo</a></li>
+                <li><a href="#4" style="color:white;font-size: 1.5em">联系方式</a></li>
+            </ul>
+        </div>
+    </div>
+    <div id="bgc">
+        <img src="http://5513cb398d7f0.t73.qifeiye.com/qfy-content/uploads/2014/06/665ec6826b602c88636136a13889b332.jpg" alt="页面的主要大背景" id="bigImg" class="img-responsive center-block img-rounded">
+        <h1>Welcome To My Blog!</h1>
+        <a href="#1"><button class="btn btn-danger btn-lg" id="start-btn">START</button></a>
+    </div>
+    
+    <div class="container" id="resume">
+        <a href="http://www.morning1014.info/resume.html" id="1" style="color:black" target="_blank">点击进入我的简历</a>
+    </div>
+    <div class="container" id="article">
+        <div id="2">
+            
+        </div>
+    </div>
+    <div class="container" id="demo">
+        <a href="http://www.morning1014.info/demo.html" id="3" style="color:black" target="_blank">点击进入我的demo</a>
+    </div>
+    <div id="4">
+        <div id="footer">
+            <p class="github">Github：<a href="https://github.com/Jerrymouse0" target="_blank" id="github" style="display: inline;color: skyblue">https://github.com/Jerrymouse0</a></p>
+            <p class="email">Email：morning_1014@163.com</p>
+            <p class="QQ">QQ：799910120</p>
+            <p class="tel">Tel：18827062636</p>          
+        </div>
+    </div>
 </body>
+
 </html>
+
