--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>百草园</title>
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/Jerrymouse0/Jerrymouse0.github.io/master/%E9%9B%AA%E8%8A%B1.ico" type="image/x-icon">
     <link href="http://apps.bdimg.com/libs/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link rel="stylesheet" type="text/css" href="https://github.com/Jerrymouse0/Jerrymouse0.github.io/master/index.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="http://apps.bdimg.com/libs/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <!--[if lt IE 9]>
@@ -41,29 +41,161 @@
     <div id="bgc">
         <img src="http://5513cb398d7f0.t73.qifeiye.com/qfy-content/uploads/2014/06/665ec6826b602c88636136a13889b332.jpg" alt="页面的主要大背景" id="bigImg" class="img-responsive center-block img-rounded">
         <h1>Welcome To My Blog!</h1>
-        <a href="#1"><button class="btn btn-danger btn-lg" id="start-btn">START</button></a>
+        <a href="#1">
+            <button class="btn btn-danger btn-lg" id="start-btn">&nbsp;S&nbsp;T&nbsp;A&nbsp;R&nbsp;T&nbsp;</button>
+        </a>
     </div>
-    
-    <div class="container" id="resume">
-        <a href="http://www.morning1014.info/resume.html" id="1" style="color:black" target="_blank">点击进入我的简历</a>
-    </div>
-    <div class="container" id="article">
-        <div id="2">
-            
+    <br>
+    <br>
+    <div class="container" id="1">
+        <div class="row">
+            <div class="col-md-12 h1">郭晨</div>
+            <div class="col-md-12 h4">男&nbsp;|&nbsp;1996-10&nbsp;|&nbsp;本科</div>
+            <br>
+            <br>
+            <div class="col-md-3 h3 text-success">教育经历：</div>
+            <div class="col-md-3 h3">湖北中医药大学</div>
+            <div class="col-md-3 h3">信息管理与信息系统</div>
+            <div class="col-md-3 h3">2014.9-2018.6</div>
+            <br>
+            <br>
+            <div class="col-md-12 h2 text-primary">个人介绍</div>
+            <div class="col-md-12 h4">
+                <p class="p1">
+                    本人热爱前端开发相关的工作，喜欢做一些网页的布局和特效。希望能通过自己的代码实现各种风格的网页。对HTML语义化有一定的理解；掌握CSS的一些布局方法，了解CSS3的简单动画；能手写原生JS代码完成普通的效果，有DOM编程的基础，了解闭包，原型，作用域，继承相关的内容；对Ajax，JSON，跨域有基本了解；能使用jQuery写出简单的特效；会用bootstrap做出响应式的布局；目前正在学习HTML5画布和离线存储，Vue.js，node.js;
+                </p>
+                <p class="p2">
+                    在校学习过C++，数据结构，数据库原理，计算机组成原理，计算机网络，JSP，Delphi，SQLserver，XML，SPSS等课程。能熟练运用office软件，sublime编辑器，会使用PS切图，以及firebug调试工具。
+                </p>
+                <p class="p3">
+                    由于没有相关的项目经验，导致很多对知识的运用不熟练，希望能够参与到公司具体的项目中去，学习更多的知识和技能，提升自己，为企业创造价值！
+                </p>
+            </div>
+            <br>
+            <br>
+            <div class="col-md-12 h2 text-muted">掌握技能</div>
+            <div class="col-md-12">
+                <div class="h4 text-success">HTML:</div>
+                <div class="progress progress-striped active">
+                    <div class="progress-bar progress-bar-success" style="width:80%"></div>
+                </div>
+                <div class="h4 text-info">CSS:</div>
+                <div class="progress progress-striped active">
+                    <div class="progress-bar progress-bar-info" style="width:65%"></div>
+                </div>
+                <div class="h4 text-warning">JavaScript:</div>
+                <div class="progress progress-striped active">
+                    <div class="progress-bar progress-bar-warning" style="width:50%"></div>
+                </div>
+                <div class="h4 text-danger">jQuery:</div>
+                <div class="progress progress-striped active">
+                    <div class="progress-bar progress-bar-danger" style="width:35%"></div>
+                </div>
+                <div class="h4 text-primary">bootstrap:</div>
+                <div class="progress progress-striped active">
+                    <div class="progress-bar" style="width:50%"></div>
+                </div>
+                <div class="h4 text-purple">Vue.js:</div>
+                <div class="progress progress-striped active">
+                    <div class="progress-bar progress-bar-purple" style="width:10%"></div>
+                </div>
+            </div>
+            <br>
+            <br>
+            <br>
+            <div class="col-md-6 h3 text-brown">英语等级：</div>
+            <div class="col-md-6 h3">CET4&nbsp;&nbsp;&nbsp;&nbsp;(2016.9)</div>
+        </div>
+        <br>
+        <br>
+        <div class="table-responsive">
+            <table class="table table-bordered table-hover">
+                <caption class="text-center h2 text-warning">项目经验</caption>
+                <tr>
+                    <td>个人网站：</td>
+                    <td><a href="http://www.morning1014.info" style="display: inline;color: blue">http://www.morning1014.info</a><span>&nbsp;&nbsp;完善中…</span></td>
+                </tr>
+                <tr>
+                    <td>软件环境：</td>
+                    <td>sublime,Photoshop,github,git,node.js</td>
+                </tr>
+                <tr>
+                    <td>相关内容：</td>
+                    <td>一个响应式布局的个人网站，包含我的简历，常用的JS特效，以及与同学合作完成的简单页面。</td>
+                </tr>
+            </table>
         </div>
     </div>
-    <div class="container" id="demo">
-        <a href="http://www.morning1014.info/demo.html" id="3" style="color:black" target="_blank">点击进入我的demo</a>
+    <br>
+    <br>
+    <div class="container" id="article">
+        <div id="2" class="row">
+            <div class="col-md-6"><img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1495119237027&di=3e85e02e664605337af07d1a7556c0d3&imgtype=0&src=http%3A%2F%2Fimg.zcool.cn%2Fcommunity%2F018e8656171e9e32f875313d2d7f82.png" alt="学习笔记背景图" class="img-responsive img-rounded"></div>
+            <br>
+            <br>
+            <div class="col-md-6 text-center" id="notes">
+                <h3>学习笔记</h3>
+                <br>
+                <br>
+                <a href="http://www.morning1014.info/notes.html" class="h4" style="color: orange;font-style: italic;">有关平时学习的一些笔记。</a>
+            </div>
+            <div class="col-md-6"><img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1495118966059&di=088cd3351a266194f3b0b1ad6c7d6e63&imgtype=0&src=http%3A%2F%2Fimg.zcool.cn%2Fcommunity%2F0161aa554121d4000001e71bf596c5.jpg" alt="杂技随笔背景图" class="img-responsive img-rounded"></div>
+            <div class="col-md-6 text-center" id="essay">
+                <h3>杂记随笔</h3>
+                <br>
+                <br>
+                <p>闲来无事写着玩玩的一些东西。（暂未开放）</p>
+            </div>
+            <div class="col-md-6">
+                <br>
+                <br>
+                <img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1495119069649&di=94f8cc90559f8e1e7ad8fd9b73c35044&imgtype=0&src=http%3A%2F%2Fimg.zcool.cn%2Fcommunity%2F01f87b555701710000009c50c698a4.jpg" alt="个人日记背景图" class="img-responsive img-rounded"></div>
+            <div class="col-md-6 text-center" id="diary">
+                <br>
+                <br>
+                <h3>Diary</h3>
+                <br>
+                <br>
+                <p>不解释。。。（暂未开放）</p>
+            </div>
+        </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <div class="container" id="3">
+        <div class="panel panel-success">
+            <div class="panel-heading">
+                <h3 class="panel-title text-center">JS轮播图特效</h3></div>
+            <div class="panel-body text-center">
+                <a href="" style="color: red;font-style: italic;">点击进入</a>
+            </div>
+        </div>
+        <div class="panel panel-primary">
+            <div class="panel-heading text-center">
+                <h3 class="panel-title">瀑布流照片墙</h3>
+            </div>
+            <div class="panel-body text-center">
+                <a href="" style="color: blue;font-style: italic;">点击进入</a>
+            </div>
+        </div>
+        <div class="panel panel-danger">
+            <div class="panel-heading text-center">
+                <h3 class="panel-title">淘宝放大镜效果</h3>
+            </div>
+            <div class="panel-body text-center">
+                <a href="" style="color: #006400;font-style: italic;">点击进入</a>
+            </div>
+        </div>
     </div>
     <div id="4">
         <div id="footer">
             <p class="github">Github：<a href="https://github.com/Jerrymouse0" target="_blank" id="github" style="display: inline;color: skyblue">https://github.com/Jerrymouse0</a></p>
             <p class="email">Email：morning_1014@163.com</p>
             <p class="QQ">QQ：799910120</p>
-            <p class="tel">Tel：18827062636</p>          
+            <p class="tel">Tel：18827062636</p>
         </div>
     </div>
 </body>
 
 </html>
-
