--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>百草园</title>
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/Jerrymouse0/Jerrymouse0.github.io/master/%E9%9B%AA%E8%8A%B1.ico" type="image/x-icon">
     <link href="http://apps.bdimg.com/libs/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link rel="stylesheet" type="text/css" href="https://github.com/Jerrymouse0/Jerrymouse0.github.io/master/index.css">
+    <link rel="stylesheet" type="text/css" href="https://github.com/Jerrymouse0/Jerrymouse0.github.io/blob/master/index.css">
     <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="http://apps.bdimg.com/libs/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <!--[if lt IE 9]>
