--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <br>
     <div class="container" id="article">
         <div id="2" class="row">
-            <div class="col-md-6"><img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1495119237027&di=3e85e02e664605337af07d1a7556c0d3&imgtype=0&src=http%3A%2F%2Fimg.zcool.cn%2Fcommunity%2F018e8656171e9e32f875313d2d7f82.png" alt="学习笔记背景图" class="img-responsive img-rounded"></div>
+            <div class="col-md-6"><img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1495119237027&di=3e85e02e664605337af07d1a7556c0d3&imgtype=0&src=http%3A%2F%2Fimg.zcool.cn%2Fcommunity%2F018e8656171e9e32f875313d2d7f82.png" alt="学习笔记背景图" class="img-responsive img-rounded center-block"></div>
             <br>
             <br>
             <div class="col-md-6 text-center" id="notes">
@@ -139,7 +139,7 @@
                 <br>
                 <a href="http://www.morning1014.info/notes.html" class="h4" style="color: orange;font-style: italic;">有关平时学习的一些笔记。</a>
             </div>
-            <div class="col-md-6"><img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1495118966059&di=088cd3351a266194f3b0b1ad6c7d6e63&imgtype=0&src=http%3A%2F%2Fimg.zcool.cn%2Fcommunity%2F0161aa554121d4000001e71bf596c5.jpg" alt="杂技随笔背景图" class="img-responsive img-rounded"></div>
+            <div class="col-md-6"><img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1495118966059&di=088cd3351a266194f3b0b1ad6c7d6e63&imgtype=0&src=http%3A%2F%2Fimg.zcool.cn%2Fcommunity%2F0161aa554121d4000001e71bf596c5.jpg" alt="杂技随笔背景图" class="img-responsive img-rounded center-block"></div>
             <div class="col-md-6 text-center" id="essay">
                 <h3>杂记随笔</h3>
                 <br>
@@ -149,7 +149,7 @@
             <div class="col-md-6">
                 <br>
                 <br>
-                <img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1495119069649&di=94f8cc90559f8e1e7ad8fd9b73c35044&imgtype=0&src=http%3A%2F%2Fimg.zcool.cn%2Fcommunity%2F01f87b555701710000009c50c698a4.jpg" alt="个人日记背景图" class="img-responsive img-rounded"></div>
+                <img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1495119069649&di=94f8cc90559f8e1e7ad8fd9b73c35044&imgtype=0&src=http%3A%2F%2Fimg.zcool.cn%2Fcommunity%2F01f87b555701710000009c50c698a4.jpg" alt="个人日记背景图" class="img-responsive img-rounded center-block"></div>
             <div class="col-md-6 text-center" id="diary">
                 <br>
                 <br>
