--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@
     </div>
     <div id="4">
         <div id="footer">
-            <p class="github"><img src="https://github.com/Jerrymouse0/Jerrymouse0.github.io/blob/master/github.svg" alt="Github" class="foot">Github：<a href="https://github.com/Jerrymouse0" target="_blank" id="github" style="display: inline;color: skyblue">https://github.com/Jerrymouse0</a></p>
-            <p class="email"><img src="https://github.com/Jerrymouse0/Jerrymouse0.github.io/blob/master/email.svg" alt="Email" class="foot">&nbsp;Email：morning_1014@163.com</p>
-            <p class="QQ"><img src="https://github.com/Jerrymouse0/Jerrymouse0.github.io/blob/master/qq.svg" alt="QQ" class="foot">&nbsp;QQ：799910120</p>
-            <p class="tel"><img src="https://github.com/Jerrymouse0/Jerrymouse0.github.io/blob/master/tel.svg" alt="Tel" class="foot">&nbsp;Tel：18827062636</p>
+            <p class="github"><img src="https://github.com/Jerrymouse0/Jerrymouse0.github.io/blob/master/github.png" alt="Github" class="foot">Github：<a href="https://github.com/Jerrymouse0" target="_blank" id="github" style="display: inline;color: skyblue">https://github.com/Jerrymouse0</a></p>
+            <p class="email"><img src="https://github.com/Jerrymouse0/Jerrymouse0.github.io/blob/master/email.png" alt="Email" class="foot">&nbsp;Email：morning_1014@163.com</p>
+            <p class="QQ"><img src="https://github.com/Jerrymouse0/Jerrymouse0.github.io/blob/master/qq.png" alt="QQ" class="foot">&nbsp;QQ：799910120</p>
+            <p class="tel"><img src="https://github.com/Jerrymouse0/Jerrymouse0.github.io/blob/master/tel.png" alt="Tel" class="foot">&nbsp;Tel：18827062636</p>
         </div>
     </div>
 </body>
