--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -50,16 +50,24 @@
     <div class="container" id="1">
         <div class="row">
             <div class="col-md-12 h1">郭晨</div>
+        </div>
+        <div class="row">
             <div class="col-md-12 h4">男&nbsp;|&nbsp;1996-10&nbsp;|&nbsp;本科</div>
-            <br>
-            <br>
+        </div>
+        <br>
+        <br>
+        <div class="row">
             <div class="col-md-3 h3 text-success">教育经历：</div>
             <div class="col-md-3 h3">湖北中医药大学</div>
             <div class="col-md-3 h3">信息管理与信息系统</div>
             <div class="col-md-3 h3">2014.9-2018.6</div>
-            <br>
-            <br>
+        </div>
+        <br>
+        <br>
+        <div class="row">
             <div class="col-md-12 h2 text-primary">个人介绍</div>
+        </div>
+        <div class="row">
             <div class="col-md-12 h4">
                 <p class="p1">
                     本人热爱前端开发相关的工作，喜欢做一些网页的布局和特效。希望能通过自己的代码实现各种风格的网页。对HTML语义化有一定的理解；掌握CSS的一些布局方法，了解CSS3的简单动画；能手写原生JS代码完成普通的效果，有DOM编程的基础，了解闭包，原型，作用域，继承相关的内容；对Ajax，JSON，跨域有基本了解；能使用jQuery写出简单的特效；会用bootstrap做出响应式的布局；目前正在学习HTML5画布和离线存储，Vue.js，node.js;
@@ -71,9 +79,13 @@
                     由于没有相关的项目经验，导致很多对知识的运用不熟练，希望能够参与到公司具体的项目中去，学习更多的知识和技能，提升自己，为企业创造价值！
                 </p>
             </div>
-            <br>
-            <br>
+        </div>
+        <br>
+        <br>
+        <div class="row">
             <div class="col-md-12 h2 text-muted">掌握技能</div>
+        </div>
+        <div class="row">
             <div class="col-md-12">
                 <div class="h4 text-success">HTML:</div>
                 <div class="progress progress-striped active">
@@ -100,9 +112,10 @@
                     <div class="progress-bar progress-bar-purple" style="width:10%"></div>
                 </div>
             </div>
-            <br>
-            <br>
-            <br>
+        </div>
+        <br>
+        <br>
+        <div class="row">
             <div class="col-md-6 h3 text-brown">英语等级：</div>
             <div class="col-md-6 h3">CET4&nbsp;&nbsp;&nbsp;&nbsp;(2016.9)</div>
         </div>
@@ -128,69 +141,121 @@
     </div>
     <br>
     <br>
-    <div class="container" id="article">
-        <div id="2" class="row">
+    <div class="container" id="2">
+        <div class="row">
             <div class="col-md-6"><img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1495119237027&di=3e85e02e664605337af07d1a7556c0d3&imgtype=0&src=http%3A%2F%2Fimg.zcool.cn%2Fcommunity%2F018e8656171e9e32f875313d2d7f82.png" alt="学习笔记背景图" class="img-responsive img-rounded center-block"></div>
-            <br>
-            <br>
             <div class="col-md-6 text-center" id="notes">
-                <h3>学习笔记</h3>
+                <br>
+                <br>
+                <h2 class="text-primary">学习笔记</h2>
                 <br>
                 <br>
                 <a href="http://www.morning1014.info/notes.html" class="h4" style="color: orange;font-style: italic;">有关平时学习的一些笔记。</a>
             </div>
+        </div>
+        <br>
+        <br>
+        <div class="row">
             <div class="col-md-6"><img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1495118966059&di=088cd3351a266194f3b0b1ad6c7d6e63&imgtype=0&src=http%3A%2F%2Fimg.zcool.cn%2Fcommunity%2F0161aa554121d4000001e71bf596c5.jpg" alt="杂技随笔背景图" class="img-responsive img-rounded center-block"></div>
             <div class="col-md-6 text-center" id="essay">
-                <h3>杂记随笔</h3>
                 <br>
                 <br>
-                <p>闲来无事写着玩玩的一些东西。（暂未开放）</p>
+                <h2 class="text-purple">杂记随笔</h2>
+                <br>
+                <br>
+                <p class="h4">闲来无事写着玩玩的一些东西。（暂未开放）</p>
             </div>
+        </div>
+        <br>
+        <br>
+        <div class="row">
             <div class="col-md-6">
-                <br>
-                <br>
                 <img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1495119069649&di=94f8cc90559f8e1e7ad8fd9b73c35044&imgtype=0&src=http%3A%2F%2Fimg.zcool.cn%2Fcommunity%2F01f87b555701710000009c50c698a4.jpg" alt="个人日记背景图" class="img-responsive img-rounded center-block"></div>
             <div class="col-md-6 text-center" id="diary">
                 <br>
                 <br>
-                <h3>Diary</h3>
+                <h2 class="text-danger">Diary</h2>
                 <br>
                 <br>
-                <p>不解释。。。（暂未开放）</p>
+                <p class="h4">不解释。。。（暂未开放）</p>
             </div>
         </div>
     </div>
     <br>
-    <br>
-    <br>
+    <hr class="alert-info">
     <div class="container" id="3">
-        <div class="panel panel-success">
-            <div class="panel-heading">
-                <h3 class="panel-title text-center">JS轮播图特效</h3></div>
-            <div class="panel-body text-center">
-                <a href="" style="color: red;font-style: italic;">点击进入</a>
+        <div class="row">
+            <div class="col-md-12">
+                <h2 class="text-success text-center">一些demo</h2></div>
+        </div>
+        <br>
+        <br>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="panel panel-danger">
+                    <div class="panel-heading">
+                        <h3 class="panel-title text-center">JS轮播图特效</h3></div>
+                    <div class="panel-body text-center h4">
+                        <a href="" style="color: purple;font-style: italic;">点击进入</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="panel panel-warning">
+                    <div class="panel-heading text-center">
+                        <h3 class="panel-title">瀑布流照片墙</h3>
+                    </div>
+                    <div class="panel-body text-center h4">
+                        <a href="" style="color: green;font-style: italic;">点击进入</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="panel panel-primary">
+                    <div class="panel-heading text-center">
+                        <h3 class="panel-title">淘宝放大镜效果</h3>
+                    </div>
+                    <div class="panel-body text-center h4">
+                        <a href="" style="color: orange;font-style: italic;">点击进入</a>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="panel panel-primary">
-            <div class="panel-heading text-center">
-                <h3 class="panel-title">瀑布流照片墙</h3>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="panel panel-danger">
+                    <div class="panel-heading">
+                        <h3 class="panel-title text-center">购物车效果</h3></div>
+                    <div class="panel-body text-center h4">
+                        <a href="" style="color: purple;font-style: italic;">点击进入</a>
+                    </div>
+                </div>
             </div>
-            <div class="panel-body text-center">
-                <a href="" style="color: blue;font-style: italic;">点击进入</a>
+            <div class="col-md-4">
+                <div class="panel panel-warning">
+                    <div class="panel-heading text-center">
+                        <h3 class="panel-title">Vue简易留言板</h3>
+                    </div>
+                    <div class="panel-body text-center h4">
+                        <a href="" style="color: green;font-style: italic;">点击进入</a>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="panel panel-danger">
-            <div class="panel-heading text-center">
-                <h3 class="panel-title">淘宝放大镜效果</h3>
-            </div>
-            <div class="panel-body text-center">
-                <a href="" style="color: #006400;font-style: italic;">点击进入</a>
+            <div class="col-md-4">
+                <div class="panel panel-primary">
+                    <div class="panel-heading text-center">
+                        <h3 class="panel-title">更多demo请点击↓↓↓</h3>
+                    </div>
+                    <div class="panel-body text-center h3">
+                        <a href="" style="color: red;font-style: italic;"><strong>进入demo汇总页面</strong></a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
     <div id="4">
         <div id="footer">
-            <p class="github"><img src="http://www.morning1014.info/github.png" alt="Github" class="foot">Github：<a href="https://github.com/Jerrymouse0" target="_blank" id="github" style="display: inline;color: skyblue">https://github.com/Jerrymouse0</a></p>
+            <p class="github"><img src="http://www.morning1014.info/github.png" alt="Github" class="foot">&nbsp;Github：<a href="https://github.com/Jerrymouse0" target="_blank" id="github" style="display: inline;color: skyblue">https://github.com/Jerrymouse0</a></p>
             <p class="email"><img src="http://www.morning1014.info/email.png" alt="Email" class="foot">&nbsp;Email：morning_1014@163.com</p>
             <p class="QQ"><img src="http://www.morning1014.info/qq.png" alt="QQ" class="foot">&nbsp;QQ：799910120</p>
             <p class="tel"><img src="http://www.morning1014.info/tel.png" alt="Tel" class="foot">&nbsp;Tel：18827062636</p>
