--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                         <h3 class="panel-title">Vue简易留言板</h3>
                     </div>
                     <div class="panel-body text-center h4">
-                        <a href="" style="color: green;font-style: italic;">点击进入</a>
+                        <a href="http://www.morning1014.info/vue-simple-message-board.html" style="color: green;font-style: italic;">点击进入</a>
                     </div>
                 </div>
             </div>
@@ -247,7 +247,7 @@
                         <h3 class="panel-title">更多demo请点击↓↓↓</h3>
                     </div>
                     <div class="panel-body text-center h3">
-                        <a href="" style="color: red;font-style: italic;"><strong>进入demo汇总页面</strong></a>
+                        <a href="http://www.morning1014.info/demo.html" style="color: red;font-style: italic;"><strong>进入demo汇总页面</strong></a>
                     </div>
                 </div>
             </div>
