--- a/getIP.html
+++ b/getIP.html
@@ -12,7 +12,7 @@
 
 <body>
     <script type="text/javascript">
-	alert("您的IP地址为：" + returnCitySN["cip"]+'，您所在的城市：'+returnCitySN["cname"] + "，该城市的行政代码：" + returnCitySN["cid"]);
+	alert("您的IP地址为：" + returnCitySN["cip"]+"，您所在的城市："+returnCitySN["cname"] + "，该城市的行政代码：" + returnCitySN["cid"] + "\n\n请点击确定！");
     </script>
 	<br>
 	<br>
