--- a/getIP.html
+++ b/getIP.html
@@ -10,10 +10,7 @@
 	<script src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
 </head>
 
-<body>
-    <script type="text/javascript">
-	alert("您的IP地址为：" + returnCitySN["cip"]+"，您所在的城市："+returnCitySN["cname"] + "，该城市的行政代码：" + returnCitySN["cid"] + "\n\n请点击确定！");
-    </script>
+<body> 
 	<br>
 	<br>
 	<h2 class="text-center text-primary">此弹窗调用了搜狐的第三方JS，将获取到的IP地址和城市信息返回为JSON对象，最后显示在页面中</h2>
@@ -27,6 +24,11 @@
 	        alert("您的IP地址为：" + returnCitySN["cip"]+'，您所在的城市：'+returnCitySN["cname"] + "，该城市的行政代码：" + returnCitySN["cid"]);
             &lt;/script&gt;
 	</pre>
+	<script type="text/javascript">
+	alert("您的IP地址为：" + returnCitySN["cip"]+"，您所在的城市："+returnCitySN["cname"] + "，该城市的行政代码：" + returnCitySN["cid"] + "\n\n请点击确定！");
+	var a = "您的IP地址为：" + returnCitySN["cip"]+'，您所在的城市：'+returnCitySN["cname"] + "，该城市的行政代码：" + returnCitySN["cid"];
+	document.getElementById("p1") = a;    
+    </script>
 </body>
 
 </html>
