--- a/Countdown.html
+++ b/Countdown.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <p id="demo"></p>
+    <p id="demo" class="text-center text-danger" style="margin-top: 20%;font-size: 20px"></p>
     <script type="text/javascript">
     var future = new Date('Oct 14, 2017 21:10:14').getTime();
     var my = new Date('Oct 14, 2017 21:10:14');
