--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <hr class="alert-danger">
         <p id="datetime" class="text-center text-primary h3"></p>
         <br>
-        <p id="count" class="text-center text-warning"><p>
+        <p id="count" class="text-center text-warning h3"><p>
         <hr class="alert-danger">
         <div class="row">
             <div class="col-md-12 h1">郭晨</div>
