--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         else {
             localStorage.pagecount = 1;
         }
-        $("#count").text("该网页的浏览次数为：" + localStorage.pagecount + "次");
+        $("#count").text("该网页的浏览次数为：" + localStorage.pagecount + "次(本地localStorage)");
     });
     </script>
 </head>
