--- a/love.html
+++ b/love.html
@@ -46,14 +46,14 @@
 
     .end {
         position: absolute;
-        top: 550px;
+        top: 580px;
         left: 30%;
     }
     </style>
 </head>
 
 <body>
-    <div id="blink" class="h1 text-center">★☆★☆娜娜，七夕快乐！☆★☆★</div>
+    <div id="blink" class="h2 text-center">★☆★☆娜娜，七夕快乐！☆★☆★</div>
     <hr class="text-success">
     <div class="main">
         <div id="music">
@@ -67,7 +67,7 @@
         </audio>
         <p id="string" style="display: none">
             <font color="purple">亲爱的娜娜~</font>
-            <br> 首先，请开启手机外音(●—●)
+            <br> 首先，请开启电脑外音(●—●)
             <br>
             <font color="orange">今天是七夕，牛郎织女相会的一天(⁎˃ᴗ˂⁎)</font>
             <br>
