--- a/love.html
+++ b/love.html
@@ -53,13 +53,12 @@
 </head>
 
 <body>
-    <div id="blink" class="h2 text-center">★☆★☆娜娜，七夕快乐！☆★☆★</div>
+    <div id="blink" class="h2 text-center">★☆娜娜，七夕快乐！☆★</div>
     <hr class="text-success">
     <div class="main">
         <div id="music">
             <img src="http://www.morning1014.info/music.png" alt="music" id="png">
         </div>
-        <br>
         <div id="showStr" class="h4">
         </div>
         <audio autoplay loop>
@@ -114,7 +113,7 @@
             <font color="darkgreen">I can know more about you!</font>
             <br> }
             <br>
-            <font color="red">❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤</font>
+            <font color="red">❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤</font>
             <br>
         </p>
         <div class="end">
