--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 </head>
 
 <body>
+    <script type="text/javascript" color="255,0,0" opacity="0.8" count="100" src="http://www.morning1014.info/canvas-nest.js"></script>
     <div class="navbar navbar-default mynav" role="navigation" id="0">
         <div class="navbar-header">
             <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-responsive-collapse">
