--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
     </div>
     <div id="bgc">
-        <img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1495781631&di=5d448e577626c42b60576b269cc52c4e&imgtype=jpg&er=1&src=http%3A%2F%2Fbali.fuzhou61.com%2Fcontent%2Fuploadfile%2F201502%2F15601424793485.jpg" alt="页面的主要大背景" id="bigImg" class="img-responsive center-block img-rounded">
+        <img src="http://morning1014.info/bgi.jpg" alt="页面的主要大背景" id="bigImg" class="img-responsive center-block img-rounded">
         <h1>Welcome To My Blog!</h1>
         <a href="#1">
             <button class="btn btn-danger btn-lg" id="start-btn">&nbsp;S&nbsp;T&nbsp;A&nbsp;R&nbsp;T&nbsp;</button>
