--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
     </div>
     <div id="bgc">
-        <img src="http://morning1014.info/bgi.jpg" alt="页面的主要大背景" id="bigImg" class="img-responsive center-block img-rounded">
+        <img src="http://www.morning1014.info/bgi.jpg" alt="页面的主要大背景" id="bigImg" class="img-responsive center-block img-rounded">
         <h1>Welcome To My Blog!</h1>
         <a href="#1">
             <button class="btn btn-danger btn-lg" id="start-btn">&nbsp;S&nbsp;T&nbsp;A&nbsp;R&nbsp;T&nbsp;</button>
