--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>百草园</title>
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/Jerrymouse0/Jerrymouse0.github.io/master/%E9%9B%AA%E8%8A%B1.ico" type="image/x-icon">
     <link href="http://apps.bdimg.com/libs/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link rel="stylesheet" type="text/css" href="http://www.morning1014.info/index.css">
+    <link rel="stylesheet" type="text/css" href="http://www.Jerrymouse0.github.io/index.css">
     <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="http://apps.bdimg.com/libs/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <!--[if lt IE 9]>
@@ -51,7 +51,7 @@
 </head>
 
 <body>
-    <script type="text/javascript" color="255,0,0" opacity="0.8" count="100" src="http://www.morning1014.info/canvas-nest.js"></script>
+    <script type="text/javascript" color="255,0,0" opacity="0.8" count="100" src="http://Jerrymouse0.github.io/canvas-nest.js"></script>
     <div class="navbar navbar-default mynav" role="navigation" id="0">
         <div class="navbar-header">
             <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-responsive-collapse">
@@ -60,7 +60,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="http://www.morning1014.info" class="navbar-brand" style="color:white;font-size: 2.5em">百草园</a>
+            <a href="www.Jerrymouse0.github.io" class="navbar-brand" style="color:white;font-size: 2.5em">百草园</a>
         </div>
         <div class="collapse navbar-collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -73,7 +73,7 @@
         </div>
     </div>
     <div id="bgc">
-        <img src="http://www.morning1014.info/bgi.jpg" alt="页面的主要大背景" id="bigImg" class="img-responsive center-block img-rounded">
+        <img src="http://Jerrymouse0.github.io/bgi.jpg" alt="页面的主要大背景" id="bigImg" class="img-responsive center-block img-rounded">
         <h1>Welcome To My Blog!</h1>
         <a href="#1">
             <button class="btn btn-danger btn-lg" id="start-btn">&nbsp;S&nbsp;T&nbsp;A&nbsp;R&nbsp;T&nbsp;</button>
